--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,11 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-BOT_TOKEN = ""
+OWNER_ID = "6512112451"
+TELEGRAM_API = "24788779"
+TELEGRAM_HASH = "72397431a791198efbc85af212c82b79"
+BOT_TOKEN = "6525914204:AAEQkbZt5bvd_D5b5y4YHJS1uKds5awD5us"
 
 # Update
-UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
+UPSTREAM_REPO = "https://github.com/powerhouse1997/Z-Mirror"
 UPSTREAM_BRANCH = "main"
 
 # OPTIONAL CONFIG
