--- a/config_sample.env
+++ b/config_sample.env
@@ -28,11 +28,11 @@ FILELION_API = ""
 STREAMWISH_API = ""
 
 # GDrirve Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "10EZfOHjl8uiYn1VFRbdw2q2aadmJck6q"
 IS_TEAM_DRIVE = "False"
 USE_SERVICE_ACCOUNTS = "False"
 STOP_DUPLICATE = "True"
-INDEX_URL = ""
+INDEX_URL = "https://jarvis.rautnikhil373.workers.dev/0:/mirror"
 
 # Rclone
 RCLONE_PATH = ""
@@ -54,7 +54,7 @@ USER_DUMP = ""
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "1800"
-BASE_URL = ""
+BASE_URL = "https://hellflamebot-caa5a8776244.herokuapp.com/"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
