--- a/config.env
+++ b/config.env
@@ -53,7 +53,7 @@ DUMP_CHAT_ID = ""
 USER_DUMP = ""
 
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = "1800"
+TORRENT_TIMEOUT = ""
 BASE_URL = "https://hellflamebot-caa5a8776244.herokuapp.com/"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
