--- a/config.env
+++ b/config.env
@@ -13,8 +13,8 @@ USER_SESSION_STRING = ""
 DATABASE_URL = ""
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 CMD_SUFFIX = "z"  
-AUTHORIZED_CHATS = ""   
-SUDO_USERS = ""  
+AUTHORIZED_CHATS = "-4000663353 -1001909260059"   
+SUDO_USERS = "521798593"  
 STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
@@ -47,13 +47,13 @@ LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
-LEECH_FILENAME_PREFIX = "z"
+LEECH_FILENAME_PREFIX = ""
 LEECH_REMOVE_UNWANTED = ""
 DUMP_CHAT_ID = ""
 USER_DUMP = ""
 
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "1800"
 BASE_URL = "https://hellflamebot-caa5a8776244.herokuapp.com/"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
