--- a/config.env
+++ b/config.env
@@ -29,8 +29,8 @@ STREAMWISH_API = ""
 
 # GDrirve Tools
 GDRIVE_ID = "10EZfOHjl8uiYn1VFRbdw2q2aadmJck6q"
-IS_TEAM_DRIVE = "False"
-USE_SERVICE_ACCOUNTS = "False"
+IS_TEAM_DRIVE = "True"
+USE_SERVICE_ACCOUNTS = "True"
 STOP_DUPLICATE = "True"
 INDEX_URL = "https://jarvis.rautnikhil373.workers.dev/0:/mirror"
 
@@ -68,8 +68,8 @@ RSS_DELAY = "600"
 RSS_CHAT_ID = ""
 
 # Mega
-MEGA_EMAIL = ""
-MEGA_PASSWORD = ""
+MEGA_EMAIL = "Rautnikhil373@gmail.com"
+MEGA_PASSWORD = "N!k#!l@jan97"
 
 #Limits
 STORAGE_THRESHOLD = "1"
