--- a/config.env
+++ b/config.env
@@ -54,7 +54,7 @@ USER_DUMP = ""
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "1800"
-BASE_URL = "https://hellflamebot-caa5a8776244.herokuapp.com/"
+BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
